compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0009_int_hex.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0009_int_hex.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
255
stderr:
<empty>
