compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0011_int_binary.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0011_int_binary.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
10
stderr:
<empty>
