compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0012_float_simple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0012_float_simple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
3.14
stderr:
<empty>
