compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0013_float_negative.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0013_float_negative.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
-2.5
stderr:
<empty>
