compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0016_string_empty.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0016_string_empty.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:

stderr:
<empty>
