compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0017_string_simple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0017_string_simple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
hello world
stderr:
<empty>
