compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0029_paren_string.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0029_paren_string.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
hello
stderr:
<empty>
