compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0030_paren_bool.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0030_paren_bool.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
true
stderr:
<empty>
