compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0033_mul_two_ints.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0033_mul_two_ints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
12
stderr:
<empty>
